chore(all): get copyright, rewrite README.md, rename google as woowacourse